--- a/albumes.html
+++ b/albumes.html
@@ -18,7 +18,6 @@
                          <li><a href="index.html">Home</a></li>
                          <li><a href="trayectoria.html">Trayectoria</a></li>
                          <li><a href="albumes.html">Albumes</a></li>
-                         <li><a href="proyectos.html">Proyectos</a></li>
                          <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                     <a href="" class="button">Entradas</a>
@@ -29,7 +28,52 @@
           </div>
      </section>
      <section class="section-albumes-dos">
-
+          <div class="contenedor-imagenes-section-albumes-dos">
+               <div class="cuadro-imagenes-section-albumes-dos">
+                    <div>
+                         <div class="imagen-cuadro-section-index-dos">
+                              <a href="https://open.spotify.com/intl-es/album/3fq06DDIkadDRB9RuBb22v?si=TRhrv65hTI-j7b6Xl5IIng" target="_blank">
+                                   <img src="img/afrodisiaco.jpg" alt="Afrodisiaco">
+                              </a>
+                         </div>
+                         <div class="texto-cuadro-section-index-dos">
+                              <h2>Afrodisiaco</h2>
+                         </div>
+                    </div>
+                    <div>
+                         <div class="imagen-cuadro-section-index-dos">
+                              <a href="https://open.spotify.com/intl-es/album/2Nt6MDJXfoxQ22tIQgWXIh?si=kPWTjFDeRmypKcU0GmGVkg" target="_blank">
+                                   <img src="img/viceversa.jpg" alt="ViceVersa">
+                              </a>
+                         </div>
+                         <div class="texto-cuadro-section-index-dos">
+                              <h2>ViceVersa</h2>
+                         </div>
+                    </div>
+               </div>
+               <div class="cuadro-imagenes-section-albumes-dos">
+                    <div>
+                         <div class="imagen-cuadro-section-index-dos">
+                              <a href="https://open.spotify.com/intl-es/album/5AcRssiG0Zqu3lqYW7hMoM?si=nLdzhGnrQ3yFEFR5glGq8Q" target="_blank">
+                                   <img src="img/saturno.jpg" alt="ViceVersa">
+                              </a>
+                         </div>
+                         <div class="texto-cuadro-section-index-dos">
+                              <h2>Saturno</h2>
+                         </div>
+                    </div>
+                    <div>
+                         <div class="imagen-cuadro-section-index-dos">
+                              <a href="https://open.spotify.com/intl-es/album/6E7Awtyx6opYTbPXx6ApzB?si=xyoeMVgnR9uIeusxqDmz4g" target="_blank">
+                                   <img src="img/playasaturno.jpg" alt="ViceVersa">
+                              </a>
+                         </div>
+                         <div class="texto-cuadro-section-index-dos">
+                              <h2>Playa Saturno</h2>
+                         </div>
+                    </div>
+               </div>
+          </div>
      </section>
      <footer>
           <span>San Juan, Puerto Rico | Rauw Alejandro | <a href="contacto.html">Contacto</a></span>
