--- a/trayectoria.html
+++ b/trayectoria.html
@@ -18,7 +18,6 @@
                          <li><a href="index.html">Home</a></li>
                          <li><a href="trayectoria.html">Trayectoria</a></li>
                          <li><a href="albumes.html">Albumes</a></li>
-                         <li><a href="proyectos.html">Proyectos</a></li>
                          <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                     <a href="" class="button">Entradas</a>
@@ -29,7 +28,86 @@
           </div>
      </section>
      <section class="section-trayectoria-dos">
-          
+          <div class="cuadro-section-trayectoria-dos">
+               <div class="texto-cuadro-section-trayectoria-dos">
+                    <div class="titulo-texto-cuadro-section-trayectoria-dos">
+                         <h1>Historia</h1>
+                    </div>
+                    <div class="texto-texto-cuadro-section-trayectoria-dos">
+                         <p>
+                              Rauw Alejandro, nacido como Raúl Alejandro Ocasio Ruiz el 
+                              10 <br> de enero de 1993 en San Juan, Puerto Rico, comenzó a 
+                              interesarse <br> por la música desde una edad temprana. Inspirado 
+                              por el ambiente <br> musical que lo rodeaba, incluyendo la 
+                              influencia de su padre, <br> guitarrista, y su madre, corista, 
+                              Rauw fue construyendo su <br> estilo único.
+                         </p>
+                         <p>
+                              Aunque inicialmente también le interesaba el fútbol, una lesión
+                              lo <br> llevó a centrarse en su carrera musical. Su talento para
+                              fusionar <br> géneros como el reguetón, pop y sonidos electrónicos
+                              lo distinguió <br> rápidamente en la escena urbana, lo que le 
+                              permitió captar la <br> atención de fanáticos en todo el mundo.
+                         </p>
+                    </div>
+               </div>
+               <div class="imagen-cuadro-section-trayectoria-dos">
+                    <img src="img/rauw_6.png" alt="rauwalejandro">
+               </div>
+          </div>
+          <div class="cuadro-section-trayectoria-dos">
+               <div class="texto-cuadro-section-trayectoria-dos">
+                    <div class="texto-cuadro-section-trayectoria-dos">
+                         <div class="titulo-texto-cuadro-section-trayectoria-dos">
+                              <h2>Exitos y Reconocimientos</h2>
+                         </div>
+                         <div class="texto-texto-cuadro-section-trayectoria-dos">
+                              <p>
+                                   Su álbum "Afrodisíaco" (2020) recibió aclamación crítica y 
+                                   le abrió las puertas a una audiencia más amplia, mientras 
+                                   que "Vice Versa" (2021) lo llevó al estrellato con el éxito 
+                                   "Todo de Ti", que se convirtió en un hit global y rompió 
+                                   récords de reproducción en plataformas como Spotify.
+                              </p>
+                              <p>
+                                   Ha ganado varios premios, incluidos Premios Billboard de la 
+                                   Música Latina y nominaciones al Grammy Latino. Su versatilidad 
+                                   y originalidad en la producción de sus temas han sido reconocidas 
+                                   por críticos y fanáticos por igual.
+                              </p>
+                         </div>
+                    </div>
+               </div>
+               <div class="texto-cuadro-section-trayectoria-dos">
+                    <div class="texto-cuadro-section-trayectoria-dos">
+                         <div class="titulo-texto-cuadro-section-trayectoria-dos">
+                              <h2>Influencias Musicales</h2>
+                         </div>
+                         <div class="texto-texto-cuadro-section-trayectoria-dos">
+                              <p>
+                                   La música de Rauw Alejandro se caracteriza por una mezcla de 
+                                   influencias que le dan un toque distintivo y moderno. Estas son 
+                                   algunas de sus principales influencias:
+                              </p>
+                              <ul class="lista-texto-texto-cuadro-section-trayectoria-dos">
+                                   <li>
+                                        Reguetón clásico: Rauw ha mencionado en varias ocasiones que 
+                                        creció escuchando a artistas de la vieja escuela.
+                                   </li>
+                                   <li>
+                                        Pop y R&B: Con influencia de artistas como Usher y Chris Brown, 
+                                        Rauw incorpora un estilo más melódico y romántico a sus canciones.
+                                   </li>
+                                   <li>
+                                        Sonidos electrónicos: En sus producciones, Rauw Alejandro añade 
+                                        elementos de la música electrónica, lo que le permite experimentar 
+                                        con sonidos futuristas.
+                                   </li>
+                              </ul>
+                         </div>
+                    </div>
+               </div>
+          </div>
      </section>
      <footer>
           <span>San Juan, Puerto Rico | Rauw Alejandro | <a href="contacto.html">Contacto</a></span>
