--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,6 @@
                          <li><a href="index.html">Home</a></li>
                          <li><a href="trayectoria.html">Trayectoria</a></li>
                          <li><a href="albumes.html">Albumes</a></li>
-                         <li><a href="proyectos.html">Proyectos</a></li>
                          <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                     <a href="" class="button">Entradas</a>
@@ -29,7 +28,20 @@
           </div>
      </section>
      <section class="section-contacto-dos">
-
+          <div class="contact-info">
+               <h2>Informacion de Contacto</h2>
+               <div class="info">
+                   <p><strong>Direccion</strong><br>Sony Music Entertainment, 25 Madison Avenue, New York, NY 10010, USA</p>
+                   <p><strong>Email</strong><br><a href="mailto:rauwalejandro@gmai.com">rauwalejandro@gmai.com</a></p>
+                   <p><strong>Telefono</strong><br><a href="tel:800123456">800-123-456</a></p>
+                   <p><strong>Redes Sociales</strong></p>
+                   <div class="social-icons">
+                       <a href="#"><img src="https://img.icons8.com/ios-filled/50/000000/facebook--v1.png" alt="Facebook"></a>
+                       <a href="#"><img src="https://img.icons8.com/ios-filled/50/000000/twitter--v1.png" alt="Twitter"></a>
+                       <a href="#"><img src="https://img.icons8.com/ios-filled/50/000000/youtube-play.png" alt="YouTube"></a>
+                   </div>
+               </div>
+           </div>
      </section>
      <footer>
           <span>San Juan, Puerto Rico | Rauw Alejandro | <a href="contacto.html">Contacto</a></span>
