--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                          <li><a href="albumes.html">Albumes</a></li>
                          <li><a href="contacto.html">Contacto</a></li>
                     </ul>
-                    <a href="proyectos.html" class="button">Entradas</a>
+                    <a href="contacto.html" class="button">Entradas</a>
                </nav>
           </header>
           <div class="titulo-section">
