--- a/trayectoria.html
+++ b/trayectoria.html
@@ -64,15 +64,15 @@
                          <div class="texto-texto-cuadro-section-trayectoria-dos">
                               <p>
                                    Su álbum "Afrodisíaco" (2020) recibió aclamación crítica y 
-                                   le abrió las puertas a una audiencia más amplia, mientras 
-                                   que "Vice Versa" (2021) lo llevó al estrellato con el éxito 
-                                   "Todo de Ti", que se convirtió en un hit global y rompió 
-                                   récords de reproducción en plataformas como Spotify.
+                                   le abrió <br> las puertas a una audiencia más amplia, mientras 
+                                   que "Vice Versa" <br> (2021) lo llevó al estrellato con el éxito 
+                                   "Todo de Ti", que se convirtió <br> en un hit global y rompió 
+                                   récords de reproducción en plataformas <br> como Spotify.
                               </p>
                               <p>
                                    Ha ganado varios premios, incluidos Premios Billboard de la 
-                                   Música Latina y nominaciones al Grammy Latino. Su versatilidad 
-                                   y originalidad en la producción de sus temas han sido reconocidas 
+                                   Música <br> Latina y nominaciones al Grammy Latino. Su versatilidad 
+                                   y <br> originalidad en la producción de sus temas han sido reconocidas <br>
                                    por críticos y fanáticos por igual.
                               </p>
                          </div>
